# todo-txt-mcp

./: CHANGELOG.md  README.md  example_todo_sh.cfg  pyproject.toml  test_server.py
.github/workflows/: publish.yml  test.yml
src/todo_txt_mcp/: __init__.py  server.py
src/todo_txt_mcp/models/: __init__.py  config.py  todo.py
src/todo_txt_mcp/services/: __init__.py  file_service.py  todo_service.py
src/todo_txt_mcp/tools/: __init__.py  crud_tools.py  list_tools.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_todo_service.py
