[project]
name = "todo-txt-mcp"
version = "0.1.0"
description = "Model Context Protocol server for todo.txt file management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.0",
    "pytodotxt>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
todo-txt-mcp = "todo_txt_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_txt_mcp"]
